# exif-frame-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: demo_frame.py
src/exif_frame_cli/: __init__.py  cli.py  exif_reader.py  frame_generator.py  models.py
tests/: test_with_exif.py
